Laboratorios/Acevedo_Sanchez_Lab04/Costumes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes
-d
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Complete.java
<---- end of javadoc command ---->
Loading source file C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Complete.java...
Constructing Javadoc information...
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Complete.java:36: error: cannot find symbol
    public int price() throws CostumeShopException{
                              ^
  symbol:   class CostumeShopException
  location: class Complete
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Complete.java:48: error: cannot find symbol
    public int price(String type) throws CostumeShopException{
                                         ^
  symbol:   class CostumeShopException
  location: class Complete
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Complete.java:60: error: cannot find symbol
    public int price(boolean makeUp) throws CostumeShopException{
                                            ^
  symbol:   class CostumeShopException
  location: class Complete
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Complete.java:65: error: cannot find symbol
    public String data() throws CostumeShopException{
                                ^
  symbol:   class CostumeShopException
  location: class Complete
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Basic.java:15: error: cannot find symbol
    public int price() throws CostumeShopException{
                              ^
  symbol:   class CostumeShopException
  location: class Basic
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Costume.java:24: error: cannot find symbol
    public abstract int price() throws CostumeShopException;
                                       ^
  symbol:   class CostumeShopException
  location: class Costume
C:\Users\joan.acevedo\Downloads\Costumes-2023-2\Costumes\domain\Costume.java:33: error: cannot find symbol
    public abstract String data() throws CostumeShopException;
                                         ^
  symbol:   class CostumeShopException
  location: class Costume
7 errors
